--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,9 +3,9 @@ jobs:
   build:
     docker:
       - image: circleci/golang:1.11beta3-stretch
-    working_directory: /go/src/github.com/{{ORG_NAME}}/{{REPO_NAME}}
+    working_directory: /go/src/github.com/ParticleDecay/namecheck
     steps:
       - checkout
 
-      - run: dep ensure
+      - run: dep ensure -v
       - run: go test -v ./...
