feat: removing need for dep in CI config
feat: fixing up config

feat: forcing modules in CI build

apparently it wasn't a string

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,10 +2,12 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/golang:1.11beta3-stretch
+      - image: circleci/golang:1.11-stretch
     working_directory: /go/src/github.com/ParticleDecay/namecheck
+    environment:
+      GO111MODULE: "on"
     steps:
       - checkout
 
-      - run: dep ensure -v
+      - run: go mod tidy
       - run: go test -v ./...
